keypress Now uses div for key presses.
The game now starts upon a keyPress of 'a'
and ends with a keyUp of 'z'

--- a/src/app/play-game/play-game.component.html
+++ b/src/app/play-game/play-game.component.html
@@ -1,5 +1,4 @@
-<h1>Play</h1>
-
-<input type="text" (keypress)="onKeyPress($event)">
-<h2>{{ lettersTyped}}</h2>
- 
+<div id="alphabetDiv" (keydown)="onKeyDown($event)" (keyup)="onKeyUp($event)" tabindex="0">
+  <h1>Start typing the alphabet as fast as you can</h1>
+</div>
+<h2>{{ lettersTyped }}</h2>
