--- a/src/app/score/score.component.html
+++ b/src/app/score/score.component.html
@@ -1,2 +1,2 @@
-<h1>Total score: {{ getTotalScore() }}</h1>
+<h1>Total score: {{ getTotalScore() }}ms (lower is better)</h1>
 <div id="barChartContainer" style="width: 100%;"></div>
