again Added button to play again.
Did two minor fixes (remove obsolete code)

--- a/src/app/score/score.component.html
+++ b/src/app/score/score.component.html
@@ -1,2 +1,3 @@
 <h1>Total score: {{ getTotalScore() }}ms (lower is better)</h1>
-<div id="barChartContainer" style="width: 100%;"></div>
+<div id="barChartContainer" style="height: 570px; width: 100%;"></div>
+<button routerLink="/play">Play again</button>
