--- a/src/app/score/score.component.html
+++ b/src/app/score/score.component.html
@@ -1,3 +1,3 @@
 <h1>Total score: {{ getTotalScore() }}ms (lower is better)</h1>
 <div id="barChartContainer" style="height: 570px; width: 100%;"></div>
-<button routerLink="/play">Play again</button>
+<a class="navigate" mat-button color="primary" routerLink="/play">Play again</a>
