--- a/src/app/play-game/play-game.component.html
+++ b/src/app/play-game/play-game.component.html
@@ -1,4 +1,8 @@
 <div id="alphabetDiv" (keydown)="onKeyDown($event)" (keyup)="onKeyUp($event)" tabindex="0">
-  <h1>Start typing the alphabet as fast as you can</h1>
+  <h1>Start typing the alphabet as fast as you can!</h1>
+  <p>
+    The letters you typed will appear below.<br>    
+    To forfeit the game, press the 'Esc' key.
+  </p>
 </div>
 <h2>{{ lettersTyped }}</h2>
