--- a/src/app/score/score.component.html
+++ b/src/app/score/score.component.html
@@ -2,4 +2,8 @@
 
 <h1>Total score: {{ getTotalScore() }}ms (lower is better)</h1>
 <div id="barChartContainer" style="height: 570px; width: 100%;"></div>
-<a class="navigate" mat-button color="primary" routerLink="/play">Play again</a>
+<div *ngIf="isLowScore() && !isForfeited()">
+  <h1>You have a new low score!</h1>
+</div>
+<a class="navigate" mat-button color="primary" routerLink="/play">Play again?</a>
+
